# Kernel

./: CMakeLists.txt  CodingStyle.txt  README.md  TODO.txt  main.c  run-cc.pl  start.S
cmake/: make_floppy.cmake  make_iso.cmake  profile_detection.cmake
kern/: version.h  vga_terminal.c  vga_terminal.h
kern/cmos/: cmos.c  cmos.h
kern/disk/: PATA.c  PATA.h
kern/i386/pc/: cpuid.c  cpuid.h  flags.cmake  gdt.S  gdt.c  idt.c  interrupts.S  interrupts.c  irq.c  isr.c  isr.h  kmemdetect.c  layout.ld  main.c  memdetect.c  multiboot.h  paging.S  realmode.S  start.S  syscall.c  syscall.h  timer.c  timer.h
kern/input/: keyboard.c  keyboard.h
kern/lib/: common.c  common.h  frame.c  frame.h  kmemory.c  kmemory.h  linux.c  linux.h  oarray.c  oarray.h  paging.c  paging.h  panic.c  panic.h
kern/mm/: frame.c  frame.h  kheap.c  kheap.h  kmemdetect.c  kmemory.c  kmemory.h  paging.c  paging.h
kern/task/: task.c  task.h
kern/tty/: terminal.c  terminal.h  vga_terminal.c  vga_terminal.h
libc/: atoi.c  ctype.h  itoa.c  limits.h  malloc.c  malloc.h  math.c  math.h  sprintf_internal.c  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.h  strftime.c  strftime.h  string.c  string.h  time.c  time.h
libc/private/: platform.h
tools/: mkcrosscompiler_clang.sh  mkcrosscompiler_gcc.sh
